add `text-field` to govuk-react package.json

--- a/packages/govuk-react/package.json
+++ b/packages/govuk-react/package.json
@@ -42,6 +42,7 @@
     "@govuk-react/search-box": "^0.2.7",
     "@govuk-react/select": "^0.2.7",
     "@govuk-react/table": "^0.2.7",
+    "@govuk-react/text-field": "^0.2.7",
     "@govuk-react/text-area": "^0.2.7",
     "@govuk-react/top-nav": "^0.2.7",
     "@govuk-react/unordered-list": "^0.2.7",
